text, title, spacing fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,9 @@
   box-sizing: border-box;
 }
 
+
+
+
 html {
   font-family: sans-serif ;
   line-height: 1.15;
@@ -202,7 +205,6 @@ img {
   vertical-align: middle;
   text-align: center;
   border-style: none;
-  border-radius:.5rem;
 }
 
 svg {
@@ -4007,6 +4009,7 @@ input[type=button].btn-block {
 .navbar .container-md,
 .navbar .container-lg,
 .navbar .container-xl {
+
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -4024,7 +4027,9 @@ input[type=button].btn-block {
 .navbar-brand:hover, .navbar-brand:focus {
   text-decoration: none;
 }
-
+#portfolio{
+  padding:rem 0;
+}
 .navbar-nav {
   display: flex;
   flex-direction: column;
@@ -9717,8 +9722,11 @@ button.bg-dark:focus {
 .text-right {
   text-align: right !important;
 }
-
+#sub-headers{
+  font-family:"CookieRunOTF-Bold";
+}
 .text-center {
+  
   text-align: center !important;
 }
 
@@ -10035,8 +10043,11 @@ hr.light {
 .btn {
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
-
+#portfolio{
+  padding:8rem 0;
+}
 .btn-xl {
+  margin-top:4rem;
   padding: 1.25rem 2.25rem;
   font-size: 0.85rem;
   font-weight: 700;
